Adjust unltoday headline panel text size to prevent text overflow

--- a/splash/test.css
+++ b/splash/test.css
@@ -135,7 +135,7 @@ UNL Today Slide
     color:#baced7;
 }
 #maincontent .currentScroller .unltoday h3 {
-    font-size:2.2em;
+    font-size:1.8em;
     color:#fff;
     text-shadow: #0e374a 1px 1px 1px;
     font-weight:bold;
